# libliftoff

./: .build.yml  .editorconfig  README.md  alloc.c  device.c  display.c  example.c  layer.c  list.c  log.c  meson.build  output.c  plane.c  trace.c
.builds/: alpine.yml  freebsd.yml
doc/: compositor.md
example/: common.c  common.h  compositor.c  dynamic.c  meson.build  multi-output.c  simple.c
include/: libhwc.h  libliftoff.h  list.h  log.h  private.h  trace.h
test/: bench.c  check_ndebug.c  libdrm_mock.c  libdrm_mock.h  meson.build  test_alloc.c  test_dynamic.c  test_priority.c  test_prop.c
test/include/: libdrm_mock.h
